<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/mc"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/mr"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/ms"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/m_plus"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/m_minus"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteSymbol"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/clearEntry"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/ce"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/clear"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/c"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/changeSymbol"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/plusminus"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/squareRoot"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/root"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/_7"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/_8"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/_9"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/percent"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/_4"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/_5"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/_6"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_1_x"
                android:textColor="@color/black"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="319dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/_1"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                    <Button
                        android:id="@+id/_2"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/_2"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                    <Button
                        android:id="@+id/_3"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/_3"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                    <Button
                        android:id="@+id/minus"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/minus"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/_0"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="13dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                    <Button
                        android:id="@+id/dot"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/dot"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                    <Button
                        android:id="@+id/plus"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="0dp"
                        android:layout_height="72dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/plus"
                        android:textColor="@color/black"
                        app:cornerRadius="5dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/equal"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="71dp"
                android:layout_height="155dp"
                android:layout_gravity="top|center_horizontal"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:translationX="160dp"
                android:translationY="5dp"
                app:cornerRadius="5dp" />

        </FrameLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
